Commit fix overflow

--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -1,9 +1,5 @@
 /*# sourceMappingURL=prueba.css.map */
-$hover-color:#bfa252
-$background-color1: #333
 
-
-@import url('https://fonts.googleapis.com/css2?family=Nabla&family=Nunito+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@600&family=Roboto:wght@300;400;500;700;900&display=swap');
 @import url("https://acupoftee.github.io/fonts/Clip.ttf");
 
@@ -13,7 +9,7 @@ html {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: auto;
+    overflow-x: hidden;
     position: relative;
 }
 
@@ -45,9 +41,7 @@ html {
     border-radius: 0px;
     padding: 3px;
     box-sizing: border-box;
-    object-fit: cover;
 }
-
 
 .btn-warning:hover {
     background-color: #bfa252;
@@ -230,12 +224,13 @@ nav-item:hover {
 /* Footer */
 
 .footer-dark {
-    position: absolute;
-    padding: 50px 0;
+    position: static;
+    padding: 40px 10px 10px;
     color:#f0f9ff;
     background-color:#222;
-    bottom: 40px;
+    bottom: 0;
     width: 100%;
+    overflow: hidden;
   }
   
   .footer-dark h3 {
@@ -355,11 +350,16 @@ nav-item:hover {
     text-align: center;
 }
 
+.navbar{
+  width: 100%;
+}
+
 /* Productos */ 
 
 .container--productos--cards{
     display: flex;
     overflow: hidden;
+    flex-wrap: wrap;
   }
 
 .card--productos {
